# se-toolkit-lab-8

./: REPORT.md
backend/src/lms_backend/routers/: items.py
mcp/: pyproject.toml
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  server.py
nanobot/: Dockerfile
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
