[project]
name = "mcp-obs"
version = "0.1.0"
description = "Observability MCP server for VictoriaLogs and VictoriaTraces"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
